--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -8,7 +8,8 @@
   <!-- Load some resources only in development environment -->
   <% } %>
 </head>
-<body>
+<body ontouchstart>
+  <!-- <iframe width="900px" height="1200px" src="https://youzan.github.io/vant/#/en-US/image-preview#show-close-icon" frameborder="0"></iframe> -->
   <div id="app">
 
   </div>
