--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>小特社区</title>
+  <!-- <script src="touch-emulator.js"></script> -->
   <link rel="stylesheet" href="popup.css">
   <% if (NODE_ENV === 'development') { %>
   <!-- Load some resources only in development environment -->
